# esp32-cam-ili9341

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  decode_image.c  decode_image.h  idf_component.yml  lcd_ili9341.c  lcd_ili9341.h  main.c
